# Actividad-Modulo-2

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: README.md  main.py
api/api/: deps.py
api/api/v1/: api_router.py
api/api/v1/endpoints/: health.py  notes.py
api/core/: config.py  exceptions.py
api/db/: base.py  session.py
api/models/: note.py
api/repositories/: note_repository.py
api/schemas/: note.py
api/services/: note_service.py
tests/: README.md  test_python.py
