[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-base"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.28",
    "aiosqlite>=0.20.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.1.1", "pytest-asyncio>=0.23.5", "ruff>=0.3.3", "httpx>=0.27.0", "mypy>=1.9.0", "pytest-cov>=4.1.0", "requests>=2.31.0"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".git", "__pycache__", "alembic", ".venv"]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
